--- a/drivers/clk/Kconfig
+++ b/drivers/clk/Kconfig
@@ -339,6 +339,11 @@ config COMMON_CLK_FIXED_MMIO
 	help
 	  Support for Memory Mapped IO Fixed clocks
 
+config MCHP_CLK_PFSOC
+	bool "Clk driver for PolarFire SoC"
+	---help---
+	  Supports Clock Configuration found in PolarFire SoC
+
 source "drivers/clk/actions/Kconfig"
 source "drivers/clk/analogbits/Kconfig"
 source "drivers/clk/bcm/Kconfig"
